Finishing wrangling operation

--- a/exploration_template.ipynb
+++ b/exploration_template.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1219,7 +1219,7 @@
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1575,25 +1575,312 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Data wrangling"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "bike_df_copy=bike_df.copy()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#drop all null value\n",
+    "\n",
+    "bike_df_copy.dropna(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#change data type  of  start_time & end_time to date time\n",
+    "bike_df_copy['start_time']=pd.to_datetime(bike_df_copy['start_time'])\n",
+    "bike_df_copy['end_time']=pd.to_datetime(bike_df_copy['end_time'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#change data type  of end_station_id , start_station_id , member_birth_year\n",
+    "bike_df_copy['member_birth_year']=bike_df_copy['member_birth_year'].apply(int)\n",
+    "bike_df_copy['start_station_id']=bike_df_copy['start_station_id'].apply(int)\n",
+    "bike_df_copy['end_station_id']=bike_df_copy['end_station_id'].apply(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 174952 entries, 0 to 183411\n",
+      "Data columns (total 16 columns):\n",
+      " #   Column                   Non-Null Count   Dtype         \n",
+      "---  ------                   --------------   -----         \n",
+      " 0   duration_sec             174952 non-null  int64         \n",
+      " 1   start_time               174952 non-null  datetime64[ns]\n",
+      " 2   end_time                 174952 non-null  datetime64[ns]\n",
+      " 3   start_station_id         174952 non-null  int64         \n",
+      " 4   start_station_name       174952 non-null  object        \n",
+      " 5   start_station_latitude   174952 non-null  float64       \n",
+      " 6   start_station_longitude  174952 non-null  float64       \n",
+      " 7   end_station_id           174952 non-null  int64         \n",
+      " 8   end_station_name         174952 non-null  object        \n",
+      " 9   end_station_latitude     174952 non-null  float64       \n",
+      " 10  end_station_longitude    174952 non-null  float64       \n",
+      " 11  bike_id                  174952 non-null  int64         \n",
+      " 12  user_type                174952 non-null  object        \n",
+      " 13  member_birth_year        174952 non-null  int64         \n",
+      " 14  member_gender            174952 non-null  object        \n",
+      " 15  bike_share_for_all_trip  174952 non-null  object        \n",
+      "dtypes: datetime64[ns](2), float64(4), int64(5), object(5)\n",
+      "memory usage: 22.7+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "bike_df_copy.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>duration_sec</th>\n",
+       "      <th>start_time</th>\n",
+       "      <th>end_time</th>\n",
+       "      <th>start_station_id</th>\n",
+       "      <th>start_station_name</th>\n",
+       "      <th>start_station_latitude</th>\n",
+       "      <th>start_station_longitude</th>\n",
+       "      <th>end_station_id</th>\n",
+       "      <th>end_station_name</th>\n",
+       "      <th>end_station_latitude</th>\n",
+       "      <th>end_station_longitude</th>\n",
+       "      <th>bike_id</th>\n",
+       "      <th>user_type</th>\n",
+       "      <th>member_birth_year</th>\n",
+       "      <th>member_gender</th>\n",
+       "      <th>bike_share_for_all_trip</th>\n",
+       "      <th>day</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>106525</th>\n",
+       "      <td>663</td>\n",
+       "      <td>2019-02-13 18:00:25.209</td>\n",
+       "      <td>2019-02-13 18:11:29.083</td>\n",
+       "      <td>364</td>\n",
+       "      <td>China Basin St at 3rd St</td>\n",
+       "      <td>37.772000</td>\n",
+       "      <td>-122.389970</td>\n",
+       "      <td>16</td>\n",
+       "      <td>Steuart St at Market St</td>\n",
+       "      <td>37.794130</td>\n",
+       "      <td>-122.394430</td>\n",
+       "      <td>6581</td>\n",
+       "      <td>Customer</td>\n",
+       "      <td>1983</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Wed</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>February</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145141</th>\n",
+       "      <td>766</td>\n",
+       "      <td>2019-02-07 10:03:24.666</td>\n",
+       "      <td>2019-02-07 10:16:10.842</td>\n",
+       "      <td>317</td>\n",
+       "      <td>San Salvador St at 9th St</td>\n",
+       "      <td>37.333955</td>\n",
+       "      <td>-121.877349</td>\n",
+       "      <td>305</td>\n",
+       "      <td>Ryland Park</td>\n",
+       "      <td>37.342725</td>\n",
+       "      <td>-121.895617</td>\n",
+       "      <td>4044</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Thu</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>February</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>94365</th>\n",
+       "      <td>888</td>\n",
+       "      <td>2019-02-15 16:27:43.350</td>\n",
+       "      <td>2019-02-15 16:42:31.528</td>\n",
+       "      <td>79</td>\n",
+       "      <td>7th St at Brannan St</td>\n",
+       "      <td>37.773492</td>\n",
+       "      <td>-122.403673</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Broadway at Battery St</td>\n",
+       "      <td>37.798572</td>\n",
+       "      <td>-122.400869</td>\n",
+       "      <td>5032</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Fri</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>February</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13465</th>\n",
+       "      <td>709</td>\n",
+       "      <td>2019-02-27 15:58:24.945</td>\n",
+       "      <td>2019-02-27 16:10:14.050</td>\n",
+       "      <td>126</td>\n",
+       "      <td>Esprit Park</td>\n",
+       "      <td>37.761634</td>\n",
+       "      <td>-122.390648</td>\n",
+       "      <td>16</td>\n",
+       "      <td>Steuart St at Market St</td>\n",
+       "      <td>37.794130</td>\n",
+       "      <td>-122.394430</td>\n",
+       "      <td>5009</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>1971</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Wed</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>February</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>148779</th>\n",
+       "      <td>560</td>\n",
+       "      <td>2019-02-06 20:46:21.376</td>\n",
+       "      <td>2019-02-06 20:55:42.022</td>\n",
+       "      <td>93</td>\n",
+       "      <td>4th St at Mission Bay Blvd S</td>\n",
+       "      <td>37.770407</td>\n",
+       "      <td>-122.391198</td>\n",
+       "      <td>47</td>\n",
+       "      <td>4th St at Harrison St</td>\n",
+       "      <td>37.780955</td>\n",
+       "      <td>-122.399749</td>\n",
+       "      <td>2351</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>1989</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Wed</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>February</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        duration_sec              start_time                end_time  \\\n",
+       "106525           663 2019-02-13 18:00:25.209 2019-02-13 18:11:29.083   \n",
+       "145141           766 2019-02-07 10:03:24.666 2019-02-07 10:16:10.842   \n",
+       "94365            888 2019-02-15 16:27:43.350 2019-02-15 16:42:31.528   \n",
+       "13465            709 2019-02-27 15:58:24.945 2019-02-27 16:10:14.050   \n",
+       "148779           560 2019-02-06 20:46:21.376 2019-02-06 20:55:42.022   \n",
+       "\n",
+       "        start_station_id            start_station_name  \\\n",
+       "106525               364      China Basin St at 3rd St   \n",
+       "145141               317     San Salvador St at 9th St   \n",
+       "94365                 79          7th St at Brannan St   \n",
+       "13465                126                   Esprit Park   \n",
+       "148779                93  4th St at Mission Bay Blvd S   \n",
+       "\n",
+       "        start_station_latitude  start_station_longitude  end_station_id  \\\n",
+       "106525               37.772000              -122.389970              16   \n",
+       "145141               37.333955              -121.877349             305   \n",
+       "94365                37.773492              -122.403673               9   \n",
+       "13465                37.761634              -122.390648              16   \n",
+       "148779               37.770407              -122.391198              47   \n",
+       "\n",
+       "               end_station_name  end_station_latitude  end_station_longitude  \\\n",
+       "106525  Steuart St at Market St             37.794130            -122.394430   \n",
+       "145141              Ryland Park             37.342725            -121.895617   \n",
+       "94365    Broadway at Battery St             37.798572            -122.400869   \n",
+       "13465   Steuart St at Market St             37.794130            -122.394430   \n",
+       "148779    4th St at Harrison St             37.780955            -122.399749   \n",
+       "\n",
+       "        bike_id   user_type  member_birth_year member_gender  \\\n",
+       "106525     6581    Customer               1983          Male   \n",
+       "145141     4044  Subscriber               1995        Female   \n",
+       "94365      5032  Subscriber               1994          Male   \n",
+       "13465      5009  Subscriber               1971          Male   \n",
+       "148779     2351  Subscriber               1989        Female   \n",
+       "\n",
+       "       bike_share_for_all_trip  day  year     month  \n",
+       "106525                      No  Wed  2019  February  \n",
+       "145141                     Yes  Thu  2019  February  \n",
+       "94365                       No  Fri  2019  February  \n",
+       "13465                       No  Wed  2019  February  \n",
+       "148779                      No  Wed  2019  February  "
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#isolate day and month  of  start_time & end_time \n",
+    "bike_df_copy['day']=bike_df_copy.start_time.dt.strftime('%a')\n",
+    "bike_df_copy['year']  = bike_df_copy.start_time.dt.year\n",
+    "bike_df_copy['month']  = bike_df_copy.start_time.dt.month_name()\n",
+    "bike_df_copy.sample(5)"
+   ]
   },
   {
    "cell_type": "markdown",
