Relation between member gender and Number of rides

--- a/exploration_template.ipynb
+++ b/exploration_template.ipynb
@@ -2284,7 +2284,7 @@
    "cell_type": "code",
    "execution_count": 60,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -2322,10 +2322,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> We observe that using system by member gender due to days of week or hours per day is balanced  which mean Males,Females and Other  work harmony with each other for example Thurseday is highest Number of rides for all member genders, 8am and 5pm is is highest Number of rides for all member genders. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 61,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
