--- a/slide_deck_template.ipynb
+++ b/slide_deck_template.ipynb
@@ -8,16 +8,21 @@
     }
    },
    "source": [
-    "# (Presentation Title)\n",
+    "# Ford Go bike-sharing system and factors of influance\n",
     "## by (Moamen Mohamed Mohasseb)\n",
     "\n",
     "## Investigation Overview\n",
     "\n",
-    "> Describe the overall goals of your presentation here.\n",
+    "> In this investigation i want to look at different factors and their influance in individual rides make in  bike-sharing-system. those factors are:\n",
+    "> * member gender.\n",
+    "> * User Type(subscriber or  customer).\n",
+    "> * Member age. \n",
+    "> * Days of week(workdays and weekends).\n",
+    "> * Hours of day.\n",
     "\n",
     "## Dataset Overview\n",
     "\n",
-    "> Provide a brief overview of the dataset to be presented here."
+    "> The data consisted  of information about individual rides made in bike-sharing system with approximately 183412 record. The attributes included user type(subscriber or customer) each trip start and end (time,location,duration) ,members age ,gender and bike share for all trip.We delete about 8265 with null data , some data contain typo but i prefer not to delete it like some ages bigger than 80 and 100 years."
    ]
   },
   {
@@ -290,9 +295,10 @@
     }
    },
    "source": [
-    "## (Visualization 1)\n",
+    "## Relation between member gender and Number of rides \n",
     "\n",
-    " > As we can see men is the majorty of users with 75% of rides numbers and womens only 23%"
+    " > In bike sharing system Males are about 75% of system users then Female with 23% finally other with 2%\n",
+    " As we can see men is the majorty of users with 75% of rides numbers and womens only 23%"
    ]
   },
   {
@@ -330,8 +336,9 @@
     }
    },
    "source": [
-    "> * #### Males is the majority of subscriber.\n",
-    "> * #### Other is the majority of customer. "
+    "> ### Although Males is the majority if we get this factor from user type prespective we observe\n",
+    "> * Males is the majority of subscriber.\n",
+    "> * Other is the majority of customer. "
    ]
   },
   {
@@ -364,9 +371,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "###  Member genders work harmony with each other whether through days of week or hours per day\n",
+    ">  We observe that using system by member gender due to days of week or hours per day is balanced  which mean Males,Females and Other  work harmony with each other for example Thurseday is highest Number of rides for all member genders, 8am and 5pm is is highest Number of rides for all member genders. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -410,7 +433,8 @@
     }
    },
    "source": [
-    "> * #### As in univariate males is the majority of all user type in bivariate we observe the others ,here we observe that other has the longest trip duration across all usertypes and in sunday it is the longest trip over all."
+    " ### Member genders Vs. Trip Duration\n",
+    "> Although Males is the majority but Other  usertype has the longest trip duration across all usertypes and in sunday it is the longest trip over all with 1400 sec trip.Then females with 1000 sec trip at last males with 800 sec.So Males have short trips ."
    ]
   },
   {
