First submit for the project

--- a/slide_deck_template.ipynb
+++ b/slide_deck_template.ipynb
@@ -23,12 +23,12 @@
     "\n",
     "## Dataset Overview\n",
     "\n",
-    "> The data consisted  of information about individual rides made in bike-sharing system with approximately 183412 record. The attributes included user type(subscriber or customer) each trip start and end (time,location,duration) ,members age ,gender and bike share for all trip.We delete about 8265 with null data , some data contain typo but i prefer not to delete it like some ages bigger than 80 and 100 years."
+    "> The data consisted  of information about individual rides made in bike-sharing system with approximately 183412 record. The attributes included user type(subscriber or customer) each trip start and end (time,location,duration) ,members age ,gender and bike share for all trip.We delete about 8265 with null data ."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 158,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -274,18 +274,6 @@
     "# load in the dataset into a pandas dataframe\n",
     "bike_df=pd.read_csv('bike_df_copy.csv')\n",
     "bike_df.head(5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "notes"
-    }
-   },
-   "source": [
-    "> Note that the above cells have been set as \"Skip\"-type slides. That means\n",
-    "that when the notebook is rendered as http slides, those cells won't show up."
    ]
   },
   {
@@ -761,32 +749,6 @@
     "plt.xlabel('Day of Week');\n",
     "plt.ylabel('Trip Duration in second');"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "notes"
-    }
-   },
-   "source": [
-    "> Once you're ready to finish your presentation, check your output by using\n",
-    "nbconvert to export the notebook and set up a server for the slides. From the\n",
-    "terminal or command line, use the following expression:\n",
-    "> > `jupyter nbconvert <file_name>.ipynb --to slides --post serve --template output_toggle`\n",
-    "\n",
-    "> This should open a tab in your web browser where you can scroll through your\n",
-    "presentation. Sub-slides can be accessed by pressing 'down' when viewing its parent\n",
-    "slide. Make sure you remove all of the quote-formatted guide notes like this one\n",
-    "before you finish your presentation!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
