First submit for the project#1

--- a/exploration_template.ipynb
+++ b/exploration_template.ipynb
@@ -5,11 +5,11 @@
    "metadata": {},
    "source": [
     "# (Ford Go Bike Exploration)\n",
-    "## by (Moamen Mohamed Mohasseb)\n",
+    "## by Moamen Mohamed Mohasseb\n",
     "\n",
-    "## Preliminary Wrangling\n",
+    "## Dataset\n",
     "\n",
-    "> Briefly introduce your dataset here.\n",
+    "> The data consisted of information about individual rides made in bike-sharing system with approximately 183412 record. The attributes included user type(subscriber or customer) each trip start and end (time,location,duration) ,members age ,gender and bike share for all trip.\n",
     "\n",
     "# import all packages and set plots to be embedded inline\n",
     "import numpy as np\n",
@@ -18,14 +18,6 @@
     "import seaborn as sb\n",
     "\n",
     "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> Load in your dataset and describe its properties through the questions below.\n",
-    "Try and motivate your exploration goals through this section."
    ]
   },
   {
@@ -1578,7 +1570,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data wrangling"
+    "## Data wrangling\n",
+    "> * We delete about 8265 with null data . \n",
+    "> * change data type  of  start_time & end_time to date time.\n",
+    "> * change data type  of end_station_id , start_station_id , member_birth_year.\n",
+    "> * Isolate day and hour  of  start_time"
    ]
   },
   {
@@ -1592,12 +1588,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "#drop all null value\n",
-    "\n",
     "bike_df_copy.dropna(inplace=True)"
    ]
   },
@@ -1877,7 +1872,7 @@
     }
    ],
    "source": [
-    "#isolate day and month  of  start_time & end_time \n",
+    "#  Isolate day and hour  of  start_time \n",
     "bike_df_copy['day']=bike_df_copy.start_time.dt.strftime('%a')\n",
     "bike_df_copy['start_hour']  = bike_df_copy.start_time.dt.hour\n",
     "bike_df_copy['age']  =2020-bike_df_copy.member_birth_year\n",
@@ -2582,17 +2577,6 @@
     "### Were there any interesting or surprising interactions between features?\n",
     "\n",
     "> As we can see from above plots each type(univariate - bivariate-multivariate)supplement and support each other to Clarify the insights ."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> At the end of your report, make sure that you export the notebook as an\n",
-    "html file from the `File > Download as... > HTML` menu. Make sure you keep\n",
-    "track of where the exported file goes, so you can put it in the same folder\n",
-    "as this notebook for project submission. Also, make sure you remove all of\n",
-    "the quote-formatted guide notes like this one before you finish your report!"
    ]
   },
   {
